--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: make init
+      run: make github-action-test
 
     - name: Deploy
       env:
