--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "start": "gatsby develop",
     "build": "NODE_ENV=production GATSBY_APP_DOMAIN=docs.arcblock.io gatsby build --prefix-paths",
     "build:dir": "mv public public_tmp && mkdir public && mv public_tmp public/blocklet",
-    "bundle": "npm run clean && npm run build && npm run build:dir && abtnode bundle --create-release",
-    "deploy": "npm run bundle && abtnode deploy .blocklet/bundle --skip-hooks",
+    "bundle": "npm run clean && npm run build && npm run build:dir && blocklet bundle --create-release",
+    "deploy": "npm run bundle && blocklet deploy .blocklet/bundle --skip-hooks",
     "serve": "gatsby serve"
   },
   "repository": {
