--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,17 +23,17 @@ jobs:
 
     - name: Deploy
       env:
-        AWS_ENDPOINT: http://54.213.55.12/admin
-        AWS_ACCESS_KEY: z1W9k2T7XTddPMtArMs7gs6pJYvsN63dggE
-        AWS_ACCESS_SECRET: ${{ secrets.AWS_ACCESS_SECRET }}
-        ALIYUN_ENDPOINT: http://39.98.93.191/admin
-        ALIYUN_ACCESS_SECRET: ${{ secrets.ALIYUN_ACCESS_SECRET }}
-        ALIYUN_ACCESS_KEY: z1aWXyf27QaUtAAT6wv4t5sL4visgBhRBPb
+        AWS_NODE_ENDPOINT: ${{ secrets.AWS_NODE_ENDPOINT }}
+        AWS_NODE_ACCESS_KEY: ${{ secrets.AWS_NODE_ACCESS_KEY }}
+        AWS_NODE_ACCESS_SECRET: ${{ secrets.AWS_NODE_ACCESS_SECRET }}
+        ALIYUN_NODE_ENDPOINT: ${{ secrets.ALIYUN_NODE_ENDPOINT }}
+        ALIYUN_NODE_ACCESS_SECRET: ${{ secrets.ALIYUN_NODE_ACCESS_SECRET }}
+        ALIYUN_NODE_ACCESS_KEY: ${{ secrets.ALIYUN_NODE_ACCESS_KEY }}
         SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         GIT_HUB_TOKEN: ${{ secrets.GIT_HUB_TOKEN }}
-        GATSBY_ALGOLIA_ADMIN_KEY: ${{ secrets.GATSBY_ALGOLIA_ADMIN_KEY }}
         GATSBY_ALGOLIA_APP_ID: ${{ secrets.GATSBY_ALGOLIA_APP_ID }}
-        GATSBY_ALGOLIA_INDEX_NAME: ${{ secrets.GATSBY_ALGOLIA_INDEX_NAME }}
+        GATSBY_ALGOLIA_ADMIN_KEY: ${{ secrets.GATSBY_ALGOLIA_ADMIN_KEY }}
         GATSBY_ALGOLIA_SEARCH_KEY: ${{ secrets.GATSBY_ALGOLIA_SEARCH_KEY }}
+        GATSBY_ALGOLIA_INDEX_NAME: ${{ secrets.GATSBY_ALGOLIA_INDEX_NAME }}
       run: bash ./tools/publish.sh
